--- a/app/views/letter_spring/_header.html.erb
+++ b/app/views/letter_spring/_header.html.erb
@@ -43,7 +43,7 @@
                     <li class="menu-item"><%= link_to t(:achievements), { controller: "achivement", action: "index" } %></li>
                  </ul>
               </li>
-              <li class="menu-item menu-item-has-children"><%= link_to t(:construction), root_path %>
+              <li class="menu-item menu-item-has-children"><%= link_to t(:construction), "#" %>
                  <ul class="sub-menu">
                     <li class="menu-item"><%= link_to t(:completed_construction_works), { controller: "completed_construction", action: "index" } %></li>
                     <li class="menu-item"><%= link_to t(:implementing_construction_works), { controller: "under_construction", action: "index" } %></li>
