--- a/app/views/notification/index.html.erb
+++ b/app/views/notification/index.html.erb
@@ -23,12 +23,32 @@
      <div class="container">
         <div class="row">
            <div class="page-content col-md-9">
+            <% if params[:locale] == "en" %>
+               <% @notification.each do |item| %>
+                  <article class="post">
+                     <header>
+                        <h3 class="post-title text-uppercase"><%= item.title_en %></h3>
+                        <ul class="post-meta">
+                           <li> <i class="fa fa-user"></i> <span class="text-uppercase">POSTED BY:</span> <%= @company.name_en %></li>
+                           <li> <i class="fa fa-calendar"></i>
+                              <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>"><%= item.created_at.strftime("%d-%m-%Y") %></time>
+                           </li>
+                           <li><i class="fa fa-th-large"></i>Notification</li>
+                        </ul>
+                     </header>
+                     <div class="post-content">
+                        <p class="post-desc"><%= truncate(strip_tags(item.content_en), length: 150) %></p>
+                        <%= link_to "Read more", { controller: "notification_single", action: "index", notification_id: item.id }, class: "btn btn-md btn-gradient btn-shadow" %>
+                     </div>
+                  </article>
+               <% end %>
+            <% else %>
                <% @notification.each do |item| %>
                   <article class="post">
                      <header>
                         <h3 class="post-title text-uppercase"><%= item.title_vn %></h3>
                         <ul class="post-meta">
-                           <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> Công Ty Cổ Phần Việt Ren</li>
+                           <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> <%= @company.name_vn %></li>
                            <li> <i class="fa fa-calendar"></i>
                               <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>"><%= item.created_at.strftime("%d-%m-%Y") %></time>
                            </li>
@@ -41,6 +61,7 @@
                      </div>
                   </article>
                <% end %>
+            <% end %>
            </div>
            <aside class="sidebar sidebar-right col-md-3">
               <%= render 'letter_spring/right_menu' %>
