--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -7,7 +7,7 @@
     <main class="site-main">
        <!-- Page header -->
        <div class="page-header page-header-sm">
-          <h1 class="text-uppercase page-title"><%= t(:intro) %></h1> </div>
+          <h1 class="text-uppercase page-title"><%= t(:about_us) %></h1> </div>
        <!-- /Page header -->
        <!-- Breadcrumbs -->
        <div class="breadcrumb">
@@ -23,8 +23,13 @@
           <div class="container">
              <div class="row">
                 <div class="col-sm-12">
-                   <h3 class="title text-uppercase"><%= @about_us.title_vn %></h3>
-                   <%= @about_us.content_vn.html_safe %>
+                  <% if params[:locale] == "en" %>
+                     <h3 class="title text-uppercase"><%= @about_us.title_en %></h3>
+                     <%= @about_us.content_en.html_safe %>
+                  <% else %>
+                     <h3 class="title text-uppercase"><%= @about_us.title_vn %></h3>
+                     <%= @about_us.content_vn.html_safe %>
+                  <% end %>
                 </div>
             </div>
           </div>
