--- a/app/views/news_single/index.html.erb
+++ b/app/views/news_single/index.html.erb
@@ -7,19 +7,24 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Thông báo</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:news) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
                <% if @news.type_vn == "Tin chuyên ngành" %>
-                  <li><%= link_to "Tin chuyên ngành", { controller: "specialized_news", action: "index" } %></li>
+                  <li><%= link_to t(:specialized_news), { controller: "specialized_news", action: "index" } %></li>
                <% else %>
-                  <li><%= link_to "Tin Việt Ren", { controller: "vietren_news", action: "index" } %></li>
+                  <li><%= link_to t(:vietren_news), { controller: "vietren_news", action: "index" } %></li>
                <% end %>
-              <li class="active"><%= @news.title_vn %></li>
+               <% if params[:locale] == "en" %>
+              <li class="active"><%= @news.title_en %></li>
+              <% else %>
+                 <li class="active"><%= @news.title_vn %></li>
+               <% end %>
            </ol>
         </div>
      </div>
@@ -27,25 +32,39 @@
      <div class="container">
         <div class="row">
             <div class="page-content col-md-9 padding-bottom-xl">
-              <article class="post post-single">
-                 <header>
-                    <h3 class="post-title text-uppercase"><%= @news.title_vn %></h3>
-                    <ul class="post-meta">
-                        <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> <%= @company.name_vn %></li>
-                        <li> <i class="fa fa-calendar"></i>
-                           <time datetime="<%= @news.created_at.strftime("%d-%m-%Y") %>"><%= @news.created_at.strftime("%d-%m-%Y") %></time>
-                        </li>
-                        <% if @news.type_vn == "Tin chuyên ngành" %>
-                           <li><i class="fa fa-th-large"></i>Tin chuyên ngành</li>
-                        <% else %>
-                           <li><i class="fa fa-th-large"></i>Tin Việt Ren</li>
-                        <% end %>
-                     </ul>
-                 </header>
-                 <div class="post-content">
-                    <p><%= @news.content_vn.html_safe %></p>
-                 </div>
-              </article>
+               <% if params[:locale] == "en" %>
+               <article class="post post-single">
+                  <header>
+                     <h3 class="post-title text-uppercase"><%= @news.title_en %></h3>
+                     <ul class="post-meta">
+                         <li> <i class="fa fa-user"></i> <span class="text-uppercase">POSTED BY:</span> <%= @company.name_en %></li>
+                         <li> <i class="fa fa-calendar"></i>
+                            <time datetime="<%= @news.created_at.strftime("%d-%m-%Y") %>"><%= @news.created_at.strftime("%d-%m-%Y") %></time>
+                         </li>
+                        <li><i class="fa fa-th-large"></i><%= @news.type_en %></li>
+                      </ul>
+                  </header>
+                  <div class="post-content">
+                     <p><%= @news.content_en.html_safe %></p>
+                  </div>
+               </article>
+               <% else %>
+                  <article class="post post-single">
+                     <header>
+                        <h3 class="post-title text-uppercase"><%= @news.title_vn %></h3>
+                        <ul class="post-meta">
+                            <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> <%= @company.name_vn %></li>
+                            <li> <i class="fa fa-calendar"></i>
+                               <time datetime="<%= @news.created_at.strftime("%d-%m-%Y") %>"><%= @news.created_at.strftime("%d-%m-%Y") %></time>
+                            </li>
+                            <li><i class="fa fa-th-large"></i><%= @news.type_vn %></li>
+                         </ul>
+                     </header>
+                     <div class="post-content">
+                        <p><%= @news.content_vn.html_safe %></p>
+                     </div>
+                  </article>
+               <% end %>
            </div>
            <aside class="sidebar sidebar-right col-md-3">
               <%= render 'letter_spring/right_menu' %>
