--- a/app/views/project_detail/index.html.erb
+++ b/app/views/project_detail/index.html.erb
@@ -7,15 +7,26 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title"><%= @project.project_tag.title_vn %></h1> </div>
+      <% if params[:locale] == "en" %>
+        <h1 class="text-uppercase page-title"><%= @project.project_tag.title_en %></h1>
+      <% else %>
+         <h1 class="text-uppercase page-title"><%= @project.project_tag.title_vn %></h1>
+      <% end %>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
               <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
-              <li><%= link_to @project.project_tag.title_vn, "#" %></li>
-              <li class="active"><%= @project.name_vn %></li>
+              <% if params[:locale] == "en" %>
+                  <li><%= link_to @project.project_tag.title_en, "#" %></li>
+                  <li class="active"><%= @project.name_en %></li>
+               <% else %>
+                   <li><%= link_to @project.project_tag.title_vn, "#" %></li>
+                  <li class="active"><%= @project.name_vn %></li>
+                <% end %>
+              
            </ol>
         </div>
      </div>
@@ -23,8 +34,13 @@
       <div class="container">
          <div class="row">
             <div class="page-content col-md-12 padding-bottom-xl">
-               <h3 class="title text-uppercase"><%= @project.name_vn %></h3>
-               <p><%= @project.content_vn.html_safe %></p>
+               <% if params[:locale] == "en" %>
+                  <h3 class="title text-uppercase"><%= @project.name_en %></h3>
+                  <p><%= @project.content_en.html_safe %></p>
+               <% else %>
+                  <h3 class="title text-uppercase"><%= @project.name_vn %></h3>
+                  <p><%= @project.content_vn.html_safe %></p>
+               <% end %>
                <p>&nbsp;</p>
                <p>&nbsp;</p>
                <div class="gallery row">
