--- a/app/views/recruitment/index.html.erb
+++ b/app/views/recruitment/index.html.erb
@@ -23,24 +23,45 @@
       <div class="container">
          <div class="row">
             <div class="page-content col-md-9">
-            <% @careers.each do |item| %>
-               <article class="post">
-                  <header>
-                     <h3 class="post-title text-uppercase"><%= item.title_vn %></h3>
-                     <ul class="post-meta">
-                        <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> <%= @company.name_vn %></li>
-                        <li> <i class="fa fa-calendar"></i>
-                           <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>"><%= item.created_at.strftime("%d-%m-%Y") %></time>
-                        </li>
-                        <li><i class="fa fa-th-large"></i>Tuyển dụng</li>
-                     </ul>
-                  </header>
-                  <div class="post-content">
-                     <p class="post-desc"><%= truncate(strip_tags(item.content_vn), length: 150) %></p>
-                     <%= link_to "Đọc tiếp", { controller: "career_single", action: "index", career_id: item.id }, class: "btn btn-md btn-gradient btn-shadow" %>
-                  </div>
-               </article>
-            <% end %>
+               <% if params[:locale] == "en" %>
+                  <% @careers.each do |item| %>
+                     <article class="post">
+                        <header>
+                           <h3 class="post-title text-uppercase"><%= item.title_en %></h3>
+                           <ul class="post-meta">
+                              <li> <i class="fa fa-user"></i> <span class="text-uppercase">POSTED BY:</span> <%= @company.name_en %></li>
+                              <li> <i class="fa fa-calendar"></i>
+                                 <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>"><%= item.created_at.strftime("%d-%m-%Y") %></time>
+                              </li>
+                              <li><i class="fa fa-th-large"></i>Career</li>
+                           </ul>
+                        </header>
+                        <div class="post-content">
+                           <p class="post-desc"><%= truncate(strip_tags(item.content_en), length: 150) %></p>
+                           <%= link_to "Read more", { controller: "career_single", action: "index", career_id: item.id }, class: "btn btn-md btn-gradient btn-shadow" %>
+                        </div>
+                     </article>
+                  <% end %>
+               <% else %>
+                  <% @careers.each do |item| %>
+                     <article class="post">
+                        <header>
+                           <h3 class="post-title text-uppercase"><%= item.title_vn %></h3>
+                           <ul class="post-meta">
+                              <li> <i class="fa fa-user"></i> <span class="text-uppercase">ĐĂNG BỞI:</span> <%= @company.name_vn %></li>
+                              <li> <i class="fa fa-calendar"></i>
+                                 <time datetime="<%= item.created_at.strftime("%d-%m-%Y") %>"><%= item.created_at.strftime("%d-%m-%Y") %></time>
+                              </li>
+                              <li><i class="fa fa-th-large"></i>Tuyển dụng</li>
+                           </ul>
+                        </header>
+                        <div class="post-content">
+                           <p class="post-desc"><%= truncate(strip_tags(item.content_vn), length: 150) %></p>
+                           <%= link_to "Đọc tiếp", { controller: "career_single", action: "index", career_id: item.id }, class: "btn btn-md btn-gradient btn-shadow" %>
+                        </div>
+                     </article>
+                  <% end %>
+               <% end %>
             </div>
             <aside class="sidebar sidebar-right col-md-3">
                <%= render 'letter_spring/right_menu' %>
