--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -21,7 +21,7 @@
               <li><%= link_to t(:notification), { controller: "notification", action: "index" } %></li>
               <li><%= link_to t(:news), { controller: "specialized_news", action: "index" } %></li>
               <li><%= link_to t(:recruitment), { controller: "recruitment", action: "index" } %></li>
-              <li><%= link_to t(:gallery), { controller: "gallery", action: "index" } %></li>
+              <li><%= link_to t(:gallery), { controller: "construction_work", action: "index" } %></li>
               <li><%= link_to t(:construction), { controller: "completed_construction", action: "index" } %></li>
               <li><%= link_to t(:equipment), { controller: "equipment_page", action: "index" } %></li>
            </ul>
