--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,7 @@
                <div class="icon">
                   <div class="icon-header">
                      <div class="icon-media"><i class="fa fa-anchor"></i></div>
-                     <h3 class="icon-title text-uppercase"><%= t(:home_construction) %></h3>
+                     <h3 class="icon-title text-uppercase"><%= link_to t(:home_construction), { controller: "all_construction", action: "index" } %></h3>
                   </div>
                   <p class="icon-desc">
                      <%= t(:home_construction_detail).html_safe %>
@@ -57,7 +57,7 @@
                <div class="icon">
                   <div class="icon-header">
                      <div class="icon-media"><i class="fa fa-train"></i></div>
-                     <h3 class="icon-title text-uppercase"><%= t(:home_leveling) %></h3>
+                     <h3 class="icon-title text-uppercase"><%= link_to t(:home_leveling), { controller: "all_construction", action: "index" } %></h3>
                   </div>
                   <p class="icon-desc">
                      <%= t(:home_leveling_detail).html_safe %>
@@ -68,7 +68,7 @@
                <div class="icon">
                   <div class="icon-header">
                      <div class="icon-media"><i class="fa fa-institution"></i></div>
-                     <h3 class="icon-title text-uppercase"><%= t(:home_investment) %></h3>
+                     <h3 class="icon-title text-uppercase"><%= link_to t(:home_investment), { controller: "all_investment_projects", action: "index" } %></h3>
                   </div>
                   <p class="icon-desc">
                      <%= t(:home_investment_detail).html_safe %>
@@ -77,7 +77,7 @@
                <div class="icon">
                   <div class="icon-header">
                      <div class="icon-media"><i class="fa fa-building-o"></i></div>
-                     <h3 class="icon-title text-uppercase"><%= t(:home_production) %></h3>
+                     <h3 class="icon-title text-uppercase"><%= link_to t(:home_production), { controller: "all_implementing_projects", action: "index" }  %></h3>
                   </div>
                   <p class="icon-desc">
                      <%= t(:home_production_detail).html_safe %>
