--- a/app/views/letter_spring/index.html.erb
+++ b/app/views/letter_spring/index.html.erb
@@ -33,6 +33,7 @@
                           <li> <i class="fa fa-calendar"></i>
                              <time datetime="<%= @spring_letters.created_at.strftime("%d-%m-%Y") %>"><%= @spring_letters.created_at.strftime("%d-%m-%Y") %></time>
                           </li>
+                          <li><i class="fa fa-th-large"></i>Letter Spring</li>
                        </ul>
                     </header>
                     <div class="post-content">
@@ -47,6 +48,7 @@
                           <li> <i class="fa fa-calendar"></i>
                              <time datetime="<%= @spring_letters.created_at.strftime("%d-%m-%Y") %>"><%= @spring_letters.created_at.strftime("%d-%m-%Y") %></time>
                           </li>
+                          <li><i class="fa fa-th-large"></i>Thư xuân</li>
                        </ul>
                     </header>
                     <div class="post-content">
