--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -20,23 +20,12 @@
         </div>
      </div>
      <!-- /Breadcrumbs -->
-     <!-- Google Maps -->
-     <section class="section no-top-padding">
-        <div class="row">
-           <div class="col-sm-12">
-              <!-- Google Maps Element -->
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122608.44915489854!2d107.30436405172198!3d16.19399222371871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141b4ffffffffff%3A0xe4aa282ba03ddf8!2zQ3R5IFRuaGggWMOieSBk4buxbmcgbWnhu4FuIHRydW5n!5e0!3m2!1svi!2s!4v1459265397029" width="1349" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-              <!-- /Google Maps Element -->
-           </div>
-        </div>
-     </section>
-     <!-- /Google Maps -->
      <!-- Contact info -->
      <section class="section no-top-padding">
         <div class="container">
            <div class="row">
-              <div class="col-md-12">
-                 <h3 class="title margin-bottom-small"><%= t(:contact_us) %></h3>
+              <div class="page-content col-md-12">
+                 <h3 class="title text-uppercase"><%= t(:contact_us) %></h3>
               </div>
            </div>
            <div class="row" style="margin-top: 40px;">
@@ -100,6 +89,17 @@
         </div>
      </section>
      <!-- /Contact info -->
+     <!-- Google Maps -->
+     <section class="section no-top-padding">
+        <div class="row">
+           <div class="col-sm-12">
+              <!-- Google Maps Element -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122608.44915489854!2d107.30436405172198!3d16.19399222371871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141b4ffffffffff%3A0xe4aa282ba03ddf8!2zQ3R5IFRuaGggWMOieSBk4buxbmcgbWnhu4FuIHRydW5n!5e0!3m2!1svi!2s!4v1459265397029" width="1349" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <!-- /Google Maps Element -->
+           </div>
+        </div>
+     </section>
+     <!-- /Google Maps -->
   </main>
   <!-- Site Footer -->
   <footer class="site-footer">
