--- a/app/views/admin/slides/_form.html.erb
+++ b/app/views/admin/slides/_form.html.erb
@@ -26,8 +26,12 @@
                 </div>
                 <div class="form-group">
                     <%= f.label "Title: ", class: "col-lg-2 control-label" %>
-                    <div class="col-lg-10">
+                    <div class="col-lg-4">
                         <%= f.text_field :title_vn, class: "form-control" %>
+                    </div>
+                    <%= f.label "Display: ", class: "col-lg-2 control-label" %>
+                    <div class="col-lg-4">
+                        <%= f.text_field :display_no, class: "form-control" %>
                     </div>
                 </div>
                 <div class="form-group">
