--- a/app/views/all_construction/index.html.erb
+++ b/app/views/all_construction/index.html.erb
@@ -24,7 +24,7 @@
          <div class="row">
             <div class="page-content col-md-12">
               
-               <h3 class="title text-uppercase"><%= t(:completed_construction_works) %></h3>
+               <h3 class="title text-uppercase"><%= link_to t(:completed_construction_works), { controller: "completed_construction", action: "index" } %></h3>
                <div class="post-content">
                   <div class="col-md-12">
                      <div class="row">
@@ -77,7 +77,7 @@
                   </div>
                </div>
                
-               <h3 class="title text-uppercase"><%= t(:implementing_construction_works) %></h3>
+               <h3 class="title text-uppercase"><%= link_to t(:implementing_construction_works), { controller: "under_construction", action: "index" }  %></h3>
                <div class="post-content">
                   <div class="col-md-12">
                      <div class="row">
@@ -130,7 +130,7 @@
                   </div>
                </div>
                
-               <h3 class="title text-uppercase"><%= t(:investment_projects) %></h3>
+               <h3 class="title text-uppercase"><%= link_to t(:investment_projects), { controller: "all_investment_projects", action: "index" } %></h3>
                <div class="post-content">
                   <div class="col-md-12">
                      <div class="row">
